crates/willikins-core/tests/snapshots/schema_generation__outputs_schema_generates.snap
---
source: crates/willikins-core/tests/schema_generation.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Outputs",
  "description": "The typed values produced by a tool's output ports.\n\nSee [`Inputs`]: same shape, same redaction guarantee, opposite\ndirection.",
  "type": "object",
  "additionalProperties": false,
  "patternProperties": {
    "^[a-z][a-z0-9_]*$": {
      "$ref": "#/$defs/Value"
    }
  },
  "$defs": {
    "Value": {
      "type": "object",
      "properties": {
        "list": {
          "type": "boolean"
        },
        "masked": {
          "const": true
        },
        "redacted": {
          "const": true
        },
        "state": {
          "type": "string",
          "enum": [
            "known",
            "unknown"
          ]
        },
        "type": {
          "type": "string"
        },
        "value": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          ]
        }
      },
      "additionalProperties": false,
      "allOf": [
        {
          "else": {
            "required": [
              "value"
            ]
          },
          "if": {
            "properties": {
              "state": {
                "const": "unknown"
              }
            },
            "required": [
              "state"
            ]
          },
          "then": {
            "not": {
              "anyOf": [
                {
                  "required": [
                    "value"
                  ]
                },
                {
                  "required": [
                    "redacted"
                  ]
                }
              ]
            }
          }
        },
        {
          "else": {
            "properties": {
              "value": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              }
            }
          },
          "if": {
            "properties": {
              "list": {
                "const": false
              }
            },
            "required": [
              "list"
            ]
          },
          "then": {
            "properties": {
              "value": {
                "type": "string"
              }
            }
          }
        }
      ],
      "required": [
        "type",
        "list",
        "state"
      ]
    }
  }
}
