crates/willikins-core/tests/snapshots/schema_generation__plan_schema_generates.snap
---
source: crates/willikins-core/tests/schema_generation.rs
assertion_line: 24
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Plan",
  "description": "A concrete, approval-classified plan.",
  "type": "object",
  "properties": {
    "blocked": {
      "description": "Every gate this plan found [`Action::Blocked`], each naming what it\nholds back. Empty for a plan with no gate, or whose every gate read\n[`Observation::Present`] — the common case, and the reason this is\n`#[serde(skip_serializing_if = \"Vec::is_empty\")]`: a plan with no\nblocked gate serializes byte-identically to before this field\nexisted. See decision (j),\n`docs/plans/2026-09-27-milestone-3e-new-ios-app.md`.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/BlockedGate"
      }
    },
    "class": {
      "description": "The plan's approval class: [`Checked::class`], a static property of\nthe checked workflow's tools, unaffected by anything `plan`\nobserves at runtime.",
      "$ref": "#/$defs/Class"
    },
    "nodes": {
      "description": "Every planned node, in [`Checked::order`]; a `for_each` node\ncontributes one entry per instance, in its source list's order.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/PlannedNode"
      }
    },
    "outputs": {
      "description": "Every workflow output's resolved value. A literal output binding has\nno entry here; see the module docs.",
      "type": "object",
      "additionalProperties": false,
      "patternProperties": {
        "^[a-z][a-z0-9_]*$": {
          "$ref": "#/$defs/Value"
        }
      }
    },
    "requires_approval": {
      "description": "Whether this plan should require human approval before running:\n`class.requires_approval()`.",
      "type": "boolean"
    },
    "workflow": {
      "description": "The planned workflow's name.",
      "$ref": "#/$defs/WorkflowName"
    }
  },
  "required": [
    "workflow",
    "nodes",
    "outputs",
    "class",
    "requires_approval",
    "blocked"
  ],
  "$defs": {
    "Action": {
      "description": "What `plan` decided to do for one node instance.",
      "oneOf": [
        {
          "description": "A pure tool computed its outputs; there is no external state to\ncreate or leave alone, whatever [`Observation`] its `read` reported.",
          "type": "string",
          "const": "compute"
        },
        {
          "description": "The resource does not exist yet: `ensure` would create it.",
          "type": "string",
          "const": "create"
        },
        {
          "description": "The resource already exists and is ours: `ensure` would be a no-op.",
          "type": "string",
          "const": "noop"
        },
        {
          "description": "A [`crate::tool::Gate`]'s `read` reported [`Observation::Absent`]:\nthe thing the operator must make does not exist yet. See\n[`Plan::blocked`].",
          "type": "string",
          "const": "blocked"
        },
        {
          "description": "This node instance binds a node or `for_each` source that is\n[`Action::Blocked`] or itself `Skip`, directly or transitively: it is\nnever read, and every one of its output ports is\n[`crate::value::ValueState::Unknown`]. See [`Plan::blocked`].",
          "type": "string",
          "const": "skip"
        }
      ]
    },
    "BlockedGate": {
      "description": "One [`Action::Blocked`] gate in a [`Plan`]: what it needs, how to make it\ntrue, what it was checking, and every node it holds back.\n\nPlain data — never a [`Value`] — so it holds no secret by construction:\n`need` and `how` come straight from the gate's own `&'static str`s, and\n`subject` is rendered text, never a live value. See\n[`crate::tool::Gate`]'s own doc.\n\nDerives [`serde::Deserialize`] as well as `Serialize` (added by task G2):\n`willikins-journal`'s `Event::RunFinished` stores a run's own\n`Vec<BlockedGate>` directly rather than through `Redacted`, since none\nof its fields is ever a [`Value`] — the same reasoning that lets\n[`crate::apply::NodeStatus`] round-trip untouched.",
      "type": "object",
      "properties": {
        "awaiting_inputs": {
          "description": "Every workflow input, bound directly to one of this node's ports,\nwhose value is still [`crate::value::ValueState::Unknown`] — G3: an\nunsupplied [`willikins_types::OperatorAcknowledgement`] input, so the\nreport can say which `--input name=done` would satisfy this gate. In\nport declaration order, deduplicated by name. Empty for a gate that\nobserves provider state rather than an operator acknowledgement.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/InputName"
          }
        },
        "holds_back": {
          "description": "Every node this gate holds back — [`Action::Skip`] because it binds\nthis gate directly or transitively — in plan order, deduplicated by\nname.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/NodeName"
          }
        },
        "how": {
          "description": "The gate's own [`crate::tool::Gate::how`].",
          "type": "string"
        },
        "instance": {
          "description": "The `for_each` instance key, if any; `None` for a node with no\n`for_each`.",
          "type": [
            "string",
            "null"
          ]
        },
        "need": {
          "description": "The gate's own [`crate::tool::Gate::need`].",
          "type": "string"
        },
        "node": {
          "description": "The blocked node.",
          "$ref": "#/$defs/NodeName"
        },
        "subject": {
          "description": "Each of the gate's [`crate::tool::Gate::subject`] ports, rendered\nfrom the bound input that reached it, in declared order.",
          "type": "array",
          "items": {
            "type": "array",
            "maxItems": 2,
            "minItems": 2,
            "prefixItems": [
              {
                "$ref": "#/$defs/PortName"
              },
              {
                "type": "string"
              }
            ]
          }
        },
        "tool": {
          "description": "The gate tool this node calls.",
          "$ref": "#/$defs/ToolName"
        }
      },
      "required": [
        "node",
        "tool",
        "need",
        "how",
        "subject",
        "holds_back",
        "awaiting_inputs"
      ]
    },
    "Class": {
      "description": "How much a tool's `ensure` should be trusted to run unattended.\n\nOrdered `Reversible < Irreversible < Destructive`, so\n[`Class::max_of`] over every node in a plan gives the plan's own class.",
      "oneOf": [
        {
          "description": "Can be undone by another `ensure` call: creating a resource that can\nsimply be deleted again.",
          "type": "string",
          "const": "reversible"
        },
        {
          "description": "Cannot be trivially undone, but is not destructive: minting a\nservice token that cannot be re-read once issued, say.",
          "type": "string",
          "const": "irreversible"
        },
        {
          "description": "Destroys or overwrites something. The highest class.",
          "type": "string",
          "const": "destructive"
        }
      ]
    },
    "InputName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*$"
    },
    "Inputs": {
      "description": "The typed values bound to a tool's input ports.\n\nA newtype over an ordered map so a tool always sees its inputs in\ndeclaration order. `Debug` and `Serialize` both come from [`Value`]'s\nown redacting implementations, so a secret input never leaks through\neither.",
      "type": "object",
      "additionalProperties": false,
      "patternProperties": {
        "^[a-z][a-z0-9_]*$": {
          "$ref": "#/$defs/Value"
        }
      }
    },
    "NodeName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*$"
    },
    "Outputs": {
      "description": "The typed values produced by a tool's output ports.\n\nSee [`Inputs`]: same shape, same redaction guarantee, opposite\ndirection.",
      "type": "object",
      "additionalProperties": false,
      "patternProperties": {
        "^[a-z][a-z0-9_]*$": {
          "$ref": "#/$defs/Value"
        }
      }
    },
    "PlannedNode": {
      "description": "One planned call to a tool: a whole node with no `for_each`, or one\ninstance of a `for_each` node.",
      "type": "object",
      "properties": {
        "action": {
          "description": "What `plan` decided to do for this instance.",
          "$ref": "#/$defs/Action"
        },
        "inputs": {
          "description": "The values bound to this instance's input ports.",
          "$ref": "#/$defs/Inputs"
        },
        "instance": {
          "description": "For a `for_each` node, the current instance's item rendered as its\ncanonical string — the same string a [`Binding::Keyed`] matches\nagainst. `None` for a node with no `for_each`.",
          "type": [
            "string",
            "null"
          ]
        },
        "name": {
          "description": "The node this instance belongs to.",
          "$ref": "#/$defs/NodeName"
        },
        "outputs": {
          "description": "Every one of this tool's declared output ports: the predicted or\nobserved value where the tool supplied one, [`Value::unknown`]\notherwise.",
          "$ref": "#/$defs/Outputs"
        },
        "tool": {
          "description": "The tool this node calls.",
          "$ref": "#/$defs/ToolName"
        }
      },
      "required": [
        "name",
        "tool",
        "action",
        "inputs",
        "outputs"
      ]
    },
    "PortName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*$"
    },
    "ToolName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(\\.[a-z][a-z0-9_]*)*$"
    },
    "Value": {
      "type": "object",
      "properties": {
        "list": {
          "type": "boolean"
        },
        "redacted": {
          "const": true
        },
        "state": {
          "type": "string",
          "enum": [
            "known",
            "unknown"
          ]
        },
        "type": {
          "type": "string"
        },
        "value": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          ]
        }
      },
      "additionalProperties": false,
      "allOf": [
        {
          "else": {
            "required": [
              "value"
            ]
          },
          "if": {
            "properties": {
              "state": {
                "const": "unknown"
              }
            },
            "required": [
              "state"
            ]
          },
          "then": {
            "not": {
              "anyOf": [
                {
                  "required": [
                    "value"
                  ]
                },
                {
                  "required": [
                    "redacted"
                  ]
                }
              ]
            }
          }
        },
        {
          "else": {
            "properties": {
              "value": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              }
            }
          },
          "if": {
            "properties": {
              "list": {
                "const": false
              }
            },
            "required": [
              "list"
            ]
          },
          "then": {
            "properties": {
              "value": {
                "type": "string"
              }
            }
          }
        }
      ],
      "required": [
        "type",
        "list",
        "state"
      ]
    },
    "WorkflowName": {
      "description": "A workflow's name: lowercase, hyphen-separated, at most 64 characters.",
      "type": "string",
      "examples": [
        "new-rust-service"
      ],
      "maxLength": 64,
      "pattern": "^(?:[a-z][a-z0-9]*(-[a-z0-9]+)*)$"
    }
  }
}
