crates/willikins-core/tests/snapshots/schema_generation__timestamp_schema_generates.snap
---
source: crates/willikins-core/tests/schema_generation.rs
assertion_line: 38
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Timestamp",
  "type": "string",
  "format": "date-time"
}
